Fix for Parsons label with too much padding

--- a/assets/_static/css/custom.css
+++ b/assets/_static/css/custom.css
@@ -9,6 +9,5 @@
     Reported issue: https://github.com/RunestoneInteractive/rs/issues/1214
  */
 .parsons .block-label.left-label {
-    font-size: 0.5em;
     padding: .0em .5em .0em .2em; 
 }
